--- a/rootfs/usr/bin/ai/Core/data/envs/st_sts_mapping.json
+++ b/rootfs/usr/bin/ai/Core/data/envs/st_sts_mapping.json
@@ -1,120 +1,116 @@
 {
   "default": {
     "main_light_in_kitchen": {
-        "id": "lamp_1",
-        "module": "wz_st_light",
-        "device_id": "input_number.kitchen_cue_01: '1'",
-        "parameters": {
-            "brightness": 100
-        }
+      "id": "lamp_1",
+      "module": "wz_st_light",
+      "device_id": "input_number.kitchen_cue_01",
+      "parameters": {
+        "value": 1,
+        "brightness": 100
+      }
     },
     "light_bulb": {
-        "id": "lamp_2",
-        "module": "wz_st_light",
-        "device_id": "input_number.dining_room_cue_01: '1'",
-        "parameters": {
-            "brightness": 100
-        }
+      "id": "lamp_2",
+      "module": "wz_st_light",
+      "device_id": "input_number.kitchen_cue_02",
+      "parameters": {
+        "value": 1,
+        "brightness": 100
+      }
     },
-    "smell": {
-        "id": "scent_1",
-        "module": "wz_st_switch",
-        "device_id": "input_number.kitchen_cue_03: '1'",
-        "parameters": { }
+    "music": {
+      "id": "music_1",
+      "module": "wz_st_illi_video",
+      "device_id": "input_number.kitchen_cue_100",
+      "parameters": {
+        "value": 1,
+        "play_times": 2
+      }
     }
   },
   "breakfast": {
-    "smell": {
-        "id": "smell_1",
-        "module": "wz_st_smell",
-        "device_id": "input_number.kitchen_cue_03: '1'",
+    "main_light_in_kitchen": {
+        "id": "lamp_1",
+        "module": "wz_st_light",
+        "device_id": "input_number.kitchen_cue_01",
         "parameters": {
+            "value": 1,
+            "brightness": 100
         }
     },
     "music": {
         "id": "music_1",
         "module": "wz_st_illi_video",
-        "device_id": "input_number.dining_room_cue_02: '1'",
+        "device_id": "input_number.kitchen_cue_100",
         "parameters": {
-            "files": "/home/pi/data/07-Zorghuis/12-Project-Wie-Zorgt/Ontbijt-met-stem-en-muziek-3.mp4",
+            "value": 1,
             "play_times": 2
         }
     },
     "light": {
         "id": "lamp_1",
         "module": "wz_st_light",
-        "device_id": "input_number.dining_room_cue_01: '1'",
+        "device_id": "input_number.dining_cue_01",
         "parameters": {
-            "brightness": 100
+          "value": 1,
+          "brightness": 100
         }
     }
   },
   "lunch": {
-    "smell": {
-        "id": "smell_2",
-        "module": "wz_st_smell",
-        "device_id": "input_number.kitchen_cue_03: '1'",
-        "parameters": {
-        }
-    },
     "music": {
         "id": "music_2",
         "module": "wz_st_illi_video",
-        "device_id": "input_number.dining_room_cue_02: '1'",
+        "device_id": "input_number.kitchen_cue_100",
         "parameters": {
-            "files": "/home/pi/data/07-Zorghuis/12-Project-Wie-Zorgt/Lunch-met-stem-en-muziek-3.mp4",
+          "value": 1,
             "play_times": 2
         }
     },
     "light": {
         "id": "lamp_2",
         "module": "wz_st_light",
-        "device_id": "input_number.kitchen_cue_01: '1'",
+        "device_id": "input_number.kitchen_cue_01",
         "parameters": {
-            "brightness": 100
+          "value": 1,
+          "brightness": 100
         }
     },
     "voice": {
         "id": "voice_2",
         "module": "wz_st_illi_video",
-        "device_id": "input_number.dining_room_cue_02: '1'",
+        "device_id": "input_number.kitchen_cue_100",
         "parameters": {
-            "files": "/home/pi/data/07-Zorghuis/12-Project-Wie-Zorgt/Lunch-met-stem-en-muziek-3.mp4",
+            "value": 1,
             "play_times": 2
         }
     }
   },
   "dinner": {
-    "smell": {
-        "id": "smell_3",
-        "module": "wz_st_smell",
-        "device_id": "input_number.kitchen_cue_03: '1'",
-        "parameters": {
-        }
-    },
     "music": {
         "id": "music_3",
         "module": "wz_st_illi_video",
-        "device_id": "input_number.dining_room_cue_02: '1'",
+        "device_id": "input_number.kitchen_cue_100",
         "parameters": {
-            "files": "/home/pi/data/07-Zorghuis/12-Project-Wie-Zorgt/Diner-met-stem-en-muziek-3.mp4",
+            "value": 1,
             "play_times": 2
         }
     },
     "light": {
         "id": "lamp_3",
         "module": "wz_st_light",
-        "device_id": "input_number.kitchen_cue_01: '1'",
+        "device_id": "input_number.kitchen_cue_01",
         "parameters": {
-            "brightness": 100
+          "value": 1,
+          "brightness": 100
         }
     },
     "voice": {
         "id": "voice_3",
         "module": "wz_st_illi_video",
-        "device_id": "input_number.dining_room_cue_02: '1'",
+        "device_id": "input_number.kitchen_cue_100",
         "parameters": {
-            "files": "/home/pi/data/07-Zorghuis/12-Project-Wie-Zorgt/Diner-met-stem-en-muziek-3.mp4",
+            "value": 1,
             "play_times": 2
         }
     }
